src/test/deca/syntax/invalid/test_synt5.deca
//Resultat:
//      Erreur syntaxique : affectation invalide
{
float x;
x=true true;
}
